# swaggerman

./: .gitignore  .swiftformat  .swiftlint.yml  Makefile  README.md  index.html  project.yml
.claude/deeptest/: README.md  oauth-redirect-sim.mjs
.claude/skills/: macos-design.md
.github/workflows/: desktop-ci.yml  desktop-release.yml
SwaggerMan.xcodeproj/: project.pbxproj
SwaggerMan/App/: SwaggerManApp.swift
SwaggerMan/Errors/: SwaggerManError.swift
SwaggerMan/Extensions/: Color+HTTPStatus.swift
SwaggerMan/Models/: HTTPRequest.swift  HTTPResponse.swift  Operation.swift  ParsedSpec.swift
SwaggerMan/Persistence/: APIEnvironment.swift  FavoriteOperation.swift  HistoryItem.swift  Project.swift  RequestCollection.swift  SavedRequest.swift
SwaggerMan/Resources/: Info.plist
SwaggerMan/Services/: CurlBuilder.swift  HTTPClient.swift  OpenAPIParser+31.swift  OpenAPIParser.swift  Protocols.swift  SnippetBuilder.swift  SpecCache.swift
SwaggerMan/Stores/: EnvironmentStore.swift  FavoriteStore.swift  HistoryStore.swift  OperationStore+Auth.swift  OperationStore.swift  ProjectStore.swift  RequestEditorStore.swift
SwaggerManTests/Integration/: EnvironmentStoreAdditionalTests.swift  EnvironmentStoreTests.swift  HistoryStoreDeleteTests.swift  HistoryStoreTests.swift  OperationStoreAdditionalTests.swift  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ai.rs  browser_capture.rs  global_shortcut.rs  lib.rs  mock_server.rs  proxy_server.rs
scripts/: install-hooks.sh  pre-commit
(+300 files in other folders)
