[package]
name = "desktop"
version = "0.4.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "gzip", "multipart", "cookies"] }
reqwest_cookie_store = "0.8"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "time"] }
axum = "0.8"
tauri-plugin-global-shortcut = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }


# 빌드 속도 우선 프로파일(GUI 앱이라 런타임 영향 미미).
# codegen-units 상향으로 컴파일 병렬화, lto off 유지.
[profile.release]
codegen-units = 256
lto = false
opt-level = 2
incremental = false
